replaced ProjectZero.html with home.html
home.html is a more robust version of the previous file, containing a
nag bar, and more.

--- a/home.html
+++ b/home.html
@@ -3,13 +3,24 @@
   <head>
   <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" type="text/css" href="style.css"> 
     <title>PROJECT ZERO</title>
+
   </head>
+    <h1>This is the header section</h1>
   <body>
-    <p>Dirt, cheap</p>
+    <nav class="nav">
+      <ul>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="#section1">Section One</a></li>
+        <li><a href="#section2">Section Two</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contactUs"></a>Contact Us</li>
+      </ul> 
+    </nav> 
+
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
