--- a/home.html
+++ b/home.html
@@ -11,6 +11,7 @@
   </head>
     <h1>This is the header section</h1>
   <body>
+    <p>Dirt, cheap</p>
     <nav class="nav">
       <ul>
         <li><a href="home.html">Home</a></li>
