updated title to "Five Hearts Compost"

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
     <link rel="stylesheet" type="text/css" href="style.css"> 
-    <title>Five Hearts Compost</title>
+    <title>About us</title>
   </head>
     <h1 style="font-weight: bold; margin-left: 28px;">Five Hearts Compost</h1>
   <body>
