Main div container and background image

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
     <link rel="stylesheet" type="text/css" href="style.css"> 
-    <title>Five Hearts Compost</title>
+    <title>Five Hearts compost</title>
   </head>
+    <!--> <img src="plant_in_dirt.jpg" alt="Plant in Dirt" style="width:578px;height:280px">--> 
+    <!--><div style="width:578px;height:280px; background-image:url("plant_in_dirt.jpg"); background-repeat:repeat-x;"></div>--> 
     <h1 style="font-weight: bold; margin-left: 28px;">Five Hearts Compost</h1>
   <body>
     <nav class="navbar navbar-default">  
@@ -15,14 +17,19 @@
         <div>
            <ul class="nav navbar-nav">
             <li><a href="home.html"><span class="glyphicon glyphicon-home"></a></span></li>
-            <li><a href="buyCompost.html">Buy Compost</a></li>
+            <li><a href="buyCompost.html">Why Compost?</a></li>
+            <li><a href="drunkenCompost">Drunken Worm Compost</a> </li>
+            <li><a href="buyCompost.html">Buy Some Dirt</a></li>
             <li><a href="faq.html">FAQ</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contactUs.html">Contact Us</a></li>
           </ul> 
       </div> 
     </nav> 
-
+    <div id="mainDiv">
+      <h2>This is where the main text are is writen</h2>
+      <p>This is a paragraph</p>
+    </div>
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
