footer and change to main text area

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" type="text/css" href="style.css"> 
     <title>Five Hearts compost</title>
   </head>
-    <!--> <img src="plant_in_dirt.jpg" alt="Plant in Dirt" style="width:578px;height:280px">--> 
-    <!--><div style="width:578px;height:280px; background-image:url("plant_in_dirt.jpg"); background-repeat:repeat-x;"></div>--> 
+  <div id="bannerImage">
+    <img src="plant_in_dirt.jpg" alt="Plant in Dirt" style="width:578px;height:280px"> 
+  </div>
     <h1 style="font-weight: bold; margin-left: 28px;">Five Hearts Compost</h1>
   <body>
     <nav class="navbar navbar-default">  
@@ -26,9 +27,23 @@
           </ul> 
       </div> 
     </nav> 
-    <div id="mainDiv">
+    <div class="jumbotron" style="padding: 25px;"> 
       <h2>This is where the main text are is writen</h2>
       <p>This is a paragraph</p>
+    </div>
+    <div id="footer">
+      <p>
+      &nbsp&copy Five Hearts Compost(2015) &nbsp | &nbsp All Rights Reserved &nbsp | &nbsp 1234 Fake st. Denver CO 00000  &nbsp | &nbsp (312)-123-4567 &nbsp | &nbsp info@fiveheartscompost.com&nbsp&nbsp&nbsp&nbsp&nbsp
+      </p><br>
+      <ul class="nav navbar-nav">
+        <li><a href="home.html"><span class="glyphicon glyphicon-home"></a></span></li>
+        <li><a href="buyCompost.html">Why Compost?</a></li>
+        <li><a href="drunkenCompost">Drunken Worm Compost</a> </li>
+        <li><a href="buyCompost.html">Buy Some Dirt</a></li>
+        <li><a href="faq.html">FAQ</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contactUs.html">Contact Us</a></li>
+      </ul>
     </div>
 
     <!-- Latest compiled and minified JavaScript -->
