nav bar and footer links are good to go

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <div class="container-fluid">
         <div>
            <ul class="nav navbar-nav">
-            <li><a href="home.html"><span class="glyphicon glyphicon-home"></a></span></li>
-            <li><a href="buyCompost.html">Why Compost?</a></li>
-            <li><a href="drunkenCompost">Drunken Worm Compost</a> </li>
+            <li><a href="index.html"><span class="glyphicon glyphicon-home"></a></span></li>
+            <li><a href="whyCompost.html">Why Compost?</a></li>
+            <li><a href="drunkenCompost.html">Drunken Worm Compost</a> </li>
             <li><a href="buyCompost.html">Buy Some Dirt</a></li>
             <li><a href="faq.html">FAQ</a></li>
             <li><a href="about.html">About</a></li>
@@ -28,7 +28,7 @@
       </div> 
     </nav> 
     <div class="jumbotron" style="padding: 25px;"> 
-      <h2>This is where the main text are is writen</h2>
+      <h2>Write some stuff here</h2>
       <p>This is a paragraph</p>
     </div>
     <div id="footer">
@@ -36,9 +36,9 @@
       &nbsp&copy Five Hearts Compost(2015) &nbsp | &nbsp All Rights Reserved &nbsp | &nbsp 1234 Fake st. Denver CO 00000  &nbsp | &nbsp (312)-123-4567 &nbsp | &nbsp info@fiveheartscompost.com&nbsp&nbsp&nbsp&nbsp&nbsp
       </p><br>
       <ul class="nav navbar-nav">
-        <li><a href="home.html"><span class="glyphicon glyphicon-home"></a></span></li>
-        <li><a href="buyCompost.html">Why Compost?</a></li>
-        <li><a href="drunkenCompost">Drunken Worm Compost</a> </li>
+        <li><a href="index.html"><span class="glyphicon glyphicon-home"></a></span></li>
+        <li><a href="whyCompost.html">Why Compost?</a></li>
+        <li><a href="drunkenCompost.html">Drunken Worm Compost</a> </li>
         <li><a href="buyCompost.html">Buy Some Dirt</a></li>
         <li><a href="faq.html">FAQ</a></li>
         <li><a href="about.html">About</a></li>
