--- a/about.html
+++ b/about.html
@@ -6,23 +6,45 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
     <link rel="stylesheet" type="text/css" href="style.css"> 
-    <title>About us</title>
+    <title>Five Hearts compost</title>
   </head>
+  <div id="bannerImage">
+    <img src="plant_in_dirt.jpg" alt="Plant in Dirt" style="width:578px;height:280px"> 
+  </div>
     <h1 style="font-weight: bold; margin-left: 28px;">Five Hearts Compost</h1>
   <body>
     <nav class="navbar navbar-default">  
       <div class="container-fluid">
         <div>
            <ul class="nav navbar-nav">
-            <li><a href="home.html"><span class="glyphicon glyphicon-home"></a></span></li>
-            <li><a href="buyCompost.html">Buy Compost</a></li>
+            <li><a href="index.html"><span class="glyphicon glyphicon-home"></a></span></li>
+            <li><a href="whyCompost.html">Why Compost?</a></li>
+            <li><a href="drunkenCompost.html">Drunken Worm Compost</a> </li>
+            <li><a href="buyCompost.html">Buy Some Dirt</a></li>
             <li><a href="faq.html">FAQ</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contactUs.html">Contact Us</a></li>
           </ul> 
       </div> 
     </nav> 
-
+    <div class="jumbotron" style="padding: 25px;"> 
+      <h2>About Us</h2>
+      <p>This is a paragraph</p>
+    </div>
+    <div id="footer">
+      <p>
+      &nbsp&copy Five Hearts Compost(2015) &nbsp | &nbsp All Rights Reserved &nbsp | &nbsp 1234 Fake st. Denver CO 00000  &nbsp | &nbsp (312)-123-4567 &nbsp | &nbsp info@fiveheartscompost.com&nbsp&nbsp&nbsp&nbsp&nbsp
+      </p><br>
+      <ul class="nav navbar-nav">
+        <li><a href="index.html"><span class="glyphicon glyphicon-home"></a></span></li>
+        <li><a href="whyCompost.html">Why Compost?</a></li>
+        <li><a href="drunkenCompost.html">Drunken Worm Compost</a> </li>
+        <li><a href="buyCompost.html">Buy Some Dirt</a></li>
+        <li><a href="faq.html">FAQ</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contactUs.html">Contact Us</a></li>
+      </ul>
+    </div>
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
