--- a/whyCompost.html
+++ b/whyCompost.html
@@ -28,7 +28,7 @@
       </div> 
     </nav> 
     <div class="jumbotron" style="padding: 25px;"> 
-      <h2>FAQ</h2>
+      <h2>Why Compost?</h2>
       <p>This is a paragraph</p>
     </div>
     <div id="footer">
