--- a/Five Hearts compost.html
+++ b/Five Hearts compost.html
@@ -8,32 +8,33 @@
     <link rel="stylesheet" type="text/css" href="style.css"> 
     <title>Five Hearts compost</title>
   </head>
-  <div>
-  <h1 id="brandName">Five Hearts Compost</h1>
+  <div id="bannerImage">
+    <img src="plant_in_dirt.jpg" alt="Plant in Dirt" style="width:578px;height:280px"> 
+  </div>
+    <h1 style="font-weight: bold; margin-left: 28px;">Five Hearts Compost</h1>
+  <body>
     <nav class="navbar navbar-default">  
-    <p><img id="navImage" src="Five_Hearts_Compost.jpg" alt="Druken Worm Logo"><p> 
-    <div class="container-fluid">
-        <ul class="nav navbar-nav">
-        <li><a href="index.html"><span class="glyphicon glyphicon-home"></a></span></li>
-        <li><a href="whyCompost.html">Why Compost?</a></li>
-        <li><a href="drunkenCompost.html">Drunken Worm Compost</a> </li>
-        <li><a href="buyCompost.html">Buy Some Dirt</a></li>
-        <li><a href="faq.html">FAQ</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contactUs.html">Contact Us</a></li>
-      </ul> 
-    </div> 
+      <div class="container-fluid">
+        <div>
+           <ul class="nav navbar-nav">
+            <li><a href="index.html"><span class="glyphicon glyphicon-home"></a></span></li>
+            <li><a href="whyCompost.html">Why Compost?</a></li>
+            <li><a href="drunkenCompost.html">Drunken Worm Compost</a> </li>
+            <li><a href="buyCompost.html">Buy Some Dirt</a></li>
+            <li><a href="faq.html">FAQ</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contactUs.html">Contact Us</a></li>
+          </ul> 
+      </div> 
     </nav> 
-  <div>
-  <body> 
-    <div class="jumbotron"> 
-      <h2>We are dirt . Cheap.</h2>
-      <p></p>
+    <div class="jumbotron" style="padding: 25px; min-height: 500px; background-image: url('45-degree-fabric-light.png');"> 
+      <h2>Write some stuff here</h2>
+      <p>This is a paragraph</p>
     </div>
-    <footer>
+    <div id="footer">
       <p>
       &nbsp&copy Five Hearts Compost(2015) &nbsp | &nbsp All Rights Reserved &nbsp | &nbsp 1234 Fake st. Denver CO 00000  &nbsp | &nbsp (312)-123-4567 &nbsp | &nbsp info@fiveheartscompost.com&nbsp&nbsp&nbsp&nbsp&nbsp
-      </p>
+      </p><br>
       <ul class="nav navbar-nav">
         <li><a href="index.html"><span class="glyphicon glyphicon-home"></a></span></li>
         <li><a href="whyCompost.html">Why Compost?</a></li>
@@ -43,7 +44,8 @@
         <li><a href="about.html">About</a></li>
         <li><a href="contactUs.html">Contact Us</a></li>
       </ul>
-    </footer> 
+    </div>
+
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   </body>
