--- a/about.html
+++ b/about.html
@@ -1,40 +1,39 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <!-- Latest compiled and minified CSS -->
+    <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
     <link rel="stylesheet" type="text/css" href="style.css"> 
-    <title>Five Hearts compost</title>
+    <title>About Us</title>
   </head>
-  <div id="bannerImage">
-    <img src="plant_in_dirt.jpg" alt="Plant in Dirt" style="width:578px;height:280px"> 
-  </div>
-    <h1 style="font-weight: bold; margin-left: 28px;">Five Hearts Compost</h1>
-  <body>
+  <header>
+    <h1 id="brandName">Five Hearts Compost</h1>
     <nav class="navbar navbar-default">  
       <div class="container-fluid">
-        <div>
-           <ul class="nav navbar-nav">
-            <li><a href="index.html"><span class="glyphicon glyphicon-home"></a></span></li>
-            <li><a href="whyCompost.html">Why Compost?</a></li>
-            <li><a href="drunkenCompost.html">Drunken Worm Compost</a> </li>
-            <li><a href="buyCompost.html">Buy Some Dirt</a></li>
-            <li><a href="faq.html">FAQ</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contactUs.html">Contact Us</a></li>
-          </ul> 
+        <ul class="nav navbar-nav">
+          <li><img id="navImage" src="Five_Hearts_Compost.jpg" alt="Druken Worm Logo"></li>
+          <li><a href="index.html"><span class="glyphicon glyphicon-home"></a></span></li>
+          <li><a href="whyCompost.html">Why Compost?</a></li>
+          <li><a href="drunkenCompost.html">Drunken Worm Compost</a> </li>
+          <li><a href="buyCompost.html">Buy Some Dirt</a></li>
+          <li><a href="faq.html">FAQ</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contactUs.html">Contact Us</a></li>
+        </ul> 
       </div> 
     </nav> 
-    <div class="jumbotron" style="padding: 25px;"> 
-      <h2>About Us</h2>
-      <p>This is a paragraph</p>
+  </header>
+  <body> 
+    <div class="jumbotron"> 
+      <h2>We are dirt . Cheap.</h2>
+      <p></p>
     </div>
-    <div id="footer">
+    <footer>
       <p>
-      &nbsp&copy Five Hearts Compost(2015) &nbsp | &nbsp All Rights Reserved &nbsp | &nbsp 1234 Fake st. Denver CO 00000  &nbsp | &nbsp (312)-123-4567 &nbsp | &nbsp info@fiveheartscompost.com&nbsp&nbsp&nbsp&nbsp&nbsp
-      </p><br>
+        &nbsp&copy Five Hearts Compost(2015) &nbsp | &nbsp All Rights Reserved &nbsp | &nbsp 1234 Fake st. Denver CO 00000  &nbsp | &nbsp (312)-123-4567 &nbsp | &nbsp info@fiveheartscompost.com&nbsp&nbsp&nbsp&nbsp&nbsp
+      </p>
       <ul class="nav navbar-nav">
         <li><a href="index.html"><span class="glyphicon glyphicon-home"></a></span></li>
         <li><a href="whyCompost.html">Why Compost?</a></li>
@@ -44,8 +43,7 @@
         <li><a href="about.html">About</a></li>
         <li><a href="contactUs.html">Contact Us</a></li>
       </ul>
-    </div>
-
+    </footer> 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   </body>
