--- a/buyCompost.html
+++ b/buyCompost.html
@@ -1,40 +1,74 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <!-- Latest compiled and minified CSS -->
+    <script type="text/javascript" src="toword.js">
+    </script>
+    <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
     <link rel="stylesheet" type="text/css" href="style.css"> 
-    <title>Five Hearts compost</title>
+    <title>Buy Compost</title>
+    <script type="text/javascript">
+      function calculate(){
+        //calculates the number of bags of compost necessary given n square feet. 
+        var ans=0;
+        var a = document.getElementById("input1").value;
+        //here it's assumed that there are only 20lbs bags and that each square foot requires 5lbs of compost. 
+        if(a<1)
+          window.alert("Invalid input!"); 
+        else if(a<4)
+          ans=1;
+        else if((a%4)>0)
+          ans= ((a-(a%4))/4)+1; 
+        else if((a%4)===0)
+          ans=a/4; 
+        ans= toWords(ans); 
+        document.getElementById("output").innerHTML=("You need "+ans+" 20lbs. bags."); 
+      }
+    </script>
   </head>
-  <div id="bannerImage">
-    <img src="plant_in_dirt.jpg" alt="Plant in Dirt" style="width:578px;height:280px"> 
-  </div>
-    <h1 style="font-weight: bold; margin-left: 28px;">Five Hearts Compost</h1>
-  <body>
+  <header>
+    <h1 id="brandName">Five Hearts Compost</h1>
     <nav class="navbar navbar-default">  
       <div class="container-fluid">
-        <div>
-           <ul class="nav navbar-nav">
-            <li><a href="index.html"><span class="glyphicon glyphicon-home"></a></span></li>
-            <li><a href="whyCompost.html">Why Compost?</a></li>
-            <li><a href="drunkenCompost.html">Drunken Worm Compost</a> </li>
-            <li><a href="buyCompost.html">Buy Some Dirt</a></li>
-            <li><a href="faq.html">FAQ</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contactUs.html">Contact Us</a></li>
-          </ul> 
+        <ul class="nav navbar-nav">
+          <li><img id="navImage" src="Five_Hearts_Compost.jpg" alt="Druken Worm Logo"></li>
+          <li><a href="index.html"><span class="glyphicon glyphicon-home"></a></span></li>
+          <li><a href="whyCompost.html">Why Compost?</a></li>
+          <li><a href="drunkenCompost.html">Drunken Worm Compost</a> </li>
+          <li><a href="buyCompost.html">Buy Some Dirt</a></li>
+          <li><a href="faq.html">FAQ</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contactUs.html">Contact Us</a></li>
+        </ul> 
       </div> 
     </nav> 
-    <div class="jumbotron" style="padding: 25px;"> 
-      <h2>Buy Compost</h2>
-      <p>This is a paragraph</p>
+  </header>
+  <body> 
+    <div class="jumbotron"> 
+      <h1>Buy Compost</h1>
+      <h2>How much compost do I need?</h2>
+      <p>Use the calculator to figure out how many bags of compost you need:</p>
+      <form>
+        How many square feet do you need to cover?
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="input-group">
+            <span class="input-group-btn">
+            <button class="btn btn-default" onclick="calculate()" type="button">Calculate</button>
+            </span>
+            <input type="text" id="input1" class="form-control" placeholder="Enter square footage ...">
+            </div><!-- /input-group -->
+            <br>
+            <p id="output" style="font-weight:bold;"></p> 
+        </div><!-- /.col-lg-6 -->
+      </form>
     </div>
-    <div id="footer">
+    <footer>
       <p>
-      &nbsp&copy Five Hearts Compost(2015) &nbsp | &nbsp All Rights Reserved &nbsp | &nbsp 1234 Fake st. Denver CO 00000  &nbsp | &nbsp (312)-123-4567 &nbsp | &nbsp info@fiveheartscompost.com&nbsp&nbsp&nbsp&nbsp&nbsp
-      </p><br>
+        &nbsp&copy Five Hearts Compost(2015) &nbsp | &nbsp All Rights Reserved &nbsp | &nbsp 1234 Fake st. Denver CO 00000  &nbsp | &nbsp (312)-123-4567 &nbsp | &nbsp info@fiveheartscompost.com&nbsp&nbsp&nbsp&nbsp&nbsp
+      </p>
       <ul class="nav navbar-nav">
         <li><a href="index.html"><span class="glyphicon glyphicon-home"></a></span></li>
         <li><a href="whyCompost.html">Why Compost?</a></li>
@@ -44,8 +78,7 @@
         <li><a href="about.html">About</a></li>
         <li><a href="contactUs.html">Contact Us</a></li>
       </ul>
-    </div>
-
+    </footer> 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   </body>
