--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <!-- Latest compiled and minified CSS -->
+    <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
     <link rel="stylesheet" type="text/css" href="style.css"> 
-    <title>Five Hearts compost</title>
+    <title>Five Hearts Compost</title>
   </head>
-  <div>
-  <h1 id="brandName">Five Hearts Compost</h1>
+  <header>
+    <h1 id="brandName">Five Hearts Compost</h1>
     <nav class="navbar navbar-default">  
-    <p><img id="navImage" src="Five_Hearts_Compost.jpg" alt="Druken Worm Logo"><p> 
-    <div class="container-fluid">
+      <div class="container-fluid">
         <ul class="nav navbar-nav">
-        <li><a href="index.html"><span class="glyphicon glyphicon-home"></a></span></li>
-        <li><a href="whyCompost.html">Why Compost?</a></li>
-        <li><a href="drunkenCompost.html">Drunken Worm Compost</a> </li>
-        <li><a href="buyCompost.html">Buy Some Dirt</a></li>
-        <li><a href="faq.html">FAQ</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contactUs.html">Contact Us</a></li>
-      </ul> 
-    </div> 
+          <li><img id="navImage" src="Five_Hearts_Compost.jpg" alt="Druken Worm Logo"></li>
+          <li><a href="index.html"><span class="glyphicon glyphicon-home"></a></span></li>
+          <li><a href="whyCompost.html">Why Compost?</a></li>
+          <li><a href="drunkenCompost.html">Drunken Worm Compost</a> </li>
+          <li><a href="buyCompost.html">Buy Some Dirt</a></li>
+          <li><a href="faq.html">FAQ</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contactUs.html">Contact Us</a></li>
+        </ul> 
+      </div> 
     </nav> 
-  <div>
+  </header>
   <body> 
     <div class="jumbotron"> 
       <h2>We are dirt . Cheap.</h2>
@@ -32,7 +32,7 @@
     </div>
     <footer>
       <p>
-      &nbsp&copy Five Hearts Compost(2015) &nbsp | &nbsp All Rights Reserved &nbsp | &nbsp 1234 Fake st. Denver CO 00000  &nbsp | &nbsp (312)-123-4567 &nbsp | &nbsp info@fiveheartscompost.com&nbsp&nbsp&nbsp&nbsp&nbsp
+        &nbsp&copy Five Hearts Compost(2015) &nbsp | &nbsp All Rights Reserved &nbsp | &nbsp 1234 Fake st. Denver CO 00000  &nbsp | &nbsp (312)-123-4567 &nbsp | &nbsp info@fiveheartscompost.com&nbsp&nbsp&nbsp&nbsp&nbsp
       </p>
       <ul class="nav navbar-nav">
         <li><a href="index.html"><span class="glyphicon glyphicon-home"></a></span></li>
