Manu's layout with modifications, calculator, and content.
Modifications to CSS, HTML, and JavaScript. External JS file. Merged JS
code for calculator in the same file with the toWord method to keep
code in one location.

--- a/drunkenCompost.html
+++ b/drunkenCompost.html
@@ -1,50 +1,54 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" type="text/css" href="style.css"> 
-    <title>Drunken Worm Compost</title>
-  </head>
-  <header>
-    <h1 id="brandName">Five Hearts Compost</h1>
-    <nav class="navbar navbar-default">  
-      <div class="container-fluid">
-        <ul class="nav navbar-nav">
-          <li><img id="navImage" src="Five_Hearts_Compost.jpg" alt="Druken Worm Logo"></li>
-          <li><a href="index.html"><span class="glyphicon glyphicon-home"></a></span></li>
-          <li><a href="whyCompost.html">Why Compost?</a></li>
-          <li><a href="drunkenCompost.html">Drunken Worm Compost</a> </li>
-          <li><a href="buyCompost.html">Buy Some Dirt</a></li>
-          <li><a href="faq.html">FAQ</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contactUs.html">Contact Us</a></li>
-        </ul> 
-      </div> 
-    </nav> 
-  </header>
-  <body> 
-    <div class="jumbotron"> 
-      <h2>We are dirt . Cheap.</h2>
-      <p></p>
+<html class="full" lang="en">
+
+<head>
+  <!-- Google Font -->
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400' rel='stylesheet' type='text/css'>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+  <!-- Custom Style Sheet -->
+  <link rel="stylesheet" href="style.css">
+  <!-- Favicon --> 
+  <link rel="shortcut icon" href="favicon.ico">
+  <title>Five Hearts Compost - Drunken Worm Compost</title>
+</head>
+
+<body>
+  <!-- Navbar -->
+  <nav class="navbar navbar-fixed-top">
+    <div class="navbar-inner">
+      <div class="container">
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="index.html">FIVE HEARTS COMPOST</a><li> 
+            <li><a href="whyCompost.html">Why Compost?</a></li>
+            <li><a href="drunkenCompost.html">Drunken Worm Compost</a> </li>
+            <li><a href="buyCompost.html">Buy Some Dirt</a></li>
+            <li><a href="faq.html">FAQ</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contactUs.html">Contact Us</a></li>
+          </ul> 
+        </div>
+      </div>
     </div>
-    <footer>
-      <p>
-        &nbsp&copy Five Hearts Compost(2015) &nbsp | &nbsp All Rights Reserved &nbsp | &nbsp 1234 Fake st. Denver CO 00000  &nbsp | &nbsp (312)-123-4567 &nbsp | &nbsp info@fiveheartscompost.com&nbsp&nbsp&nbsp&nbsp&nbsp
-      </p>
-      <ul class="nav navbar-nav">
-        <li><a href="index.html"><span class="glyphicon glyphicon-home"></a></span></li>
-        <li><a href="whyCompost.html">Why Compost?</a></li>
-        <li><a href="drunkenCompost.html">Drunken Worm Compost</a> </li>
-        <li><a href="buyCompost.html">Buy Some Dirt</a></li>
-        <li><a href="faq.html">FAQ</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contactUs.html">Contact Us</a></li>
-      </ul>
-    </footer> 
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-  </body>
+  </nav>
+  <!-- Jumbotron -->
+  <div class="jumbotron">
+    <div class="container">
+      <h1>We make dirt. Cheap.</h1>
+      <p>Sustainably sourced soil, customized for your needs.</p>
+    </div>
+  </div>
+  <!-- Info Sections -->
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <div class="info-box" id="mainInfobox">
+          <p>Colorado breweries have hundreds of thousands of pounds of spent grain waste daily from brewing beer. Colorado soils are challenged by erosion, poor microbial availability, poor water retention and pesticide use. Drunken Worm Compost symbiotically solves both of these problems by taking spent grain waste from breweries to create the best compost for growers. We connect the breweries with the gardener through innovative marketing, building a market for the brewery and the compost. </p>
+        </div>
+      </div>
+  </div>
+</body>
+
 </html>
