--- a/about.html
+++ b/about.html
@@ -1,50 +1,55 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" type="text/css" href="style.css"> 
-    <title>About Us</title>
-  </head>
-  <header>
-    <h1 id="brandName">Five Hearts Compost</h1>
-    <nav class="navbar navbar-default">  
-      <div class="container-fluid">
-        <ul class="nav navbar-nav">
-          <li><img id="navImage" src="Five_Hearts_Compost.jpg" alt="Druken Worm Logo"></li>
-          <li><a href="index.html"><span class="glyphicon glyphicon-home"></a></span></li>
-          <li><a href="whyCompost.html">Why Compost?</a></li>
-          <li><a href="drunkenCompost.html">Drunken Worm Compost</a> </li>
-          <li><a href="buyCompost.html">Buy Some Dirt</a></li>
-          <li><a href="faq.html">FAQ</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contactUs.html">Contact Us</a></li>
-        </ul> 
-      </div> 
-    </nav> 
-  </header>
-  <body> 
-    <div class="jumbotron"> 
-      <h2>We are dirt . Cheap.</h2>
-      <p></p>
+<html class="full" lang="en">
+
+<head>
+  <!-- Google Font -->
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400' rel='stylesheet' type='text/css'>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+  <!-- Custom Style Sheet -->
+  <link rel="stylesheet" href="style.css">
+  <!-- Favicon --> 
+  <link rel="shortcut icon" href="favicon.ico">
+  <title>Five Hearts Compost - About</title>
+</head>
+
+<body>
+  <!-- Navbar -->
+  <nav class="navbar navbar-fixed-top">
+    <div class="navbar-inner">
+      <div class="container">
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="index.html">FIVE HEARTS COMPOST</a><li> 
+            <li><a href="whyCompost.html">Why Compost?</a></li>
+            <li><a href="drunkenCompost.html">Drunken Worm Compost</a> </li>
+            <li><a href="buyCompost.html">Buy Some Dirt</a></li>
+            <li><a href="faq.html">FAQ</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contactUs.html">Contact Us</a></li>
+          </ul> 
+        </div>
+      </div>
     </div>
-    <footer>
-      <p>
-        &nbsp&copy Five Hearts Compost(2015) &nbsp | &nbsp All Rights Reserved &nbsp | &nbsp 1234 Fake st. Denver CO 00000  &nbsp | &nbsp (312)-123-4567 &nbsp | &nbsp info@fiveheartscompost.com&nbsp&nbsp&nbsp&nbsp&nbsp
-      </p>
-      <ul class="nav navbar-nav">
-        <li><a href="index.html"><span class="glyphicon glyphicon-home"></a></span></li>
-        <li><a href="whyCompost.html">Why Compost?</a></li>
-        <li><a href="drunkenCompost.html">Drunken Worm Compost</a> </li>
-        <li><a href="buyCompost.html">Buy Some Dirt</a></li>
-        <li><a href="faq.html">FAQ</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contactUs.html">Contact Us</a></li>
-      </ul>
-    </footer> 
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-  </body>
+  </nav>
+  <!-- Jumbotron -->
+  <div class="jumbotron">
+    <div class="container">
+      <h1>Our Story.</h1>
+      <p>Clean. Sustainable. Efficient.</p>
+    </div>
+  </div>
+  <!-- Info Sections -->
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <div class="info-box" id="mainInfobox">
+          <h2>Five Hearts Compost</h2>
+          <p>Five hearts Compost is the organically grown next step in gardening and environmentalism. Guided by environmental principles, with the use of technology and science, Five hearts strives to efficiently create the best compost from organic sources efficiently and sustainably. We connect businesses with growers by using business waste to provide growers with the best soil amendments.</p>
+        </div>
+      </div>
+  </div>
+</body>
+
 </html>
