--- a/buyCompost.html
+++ b/buyCompost.html
@@ -1,85 +1,66 @@
 <!DOCTYPE html>
-<html>
+<html class="full" lang="en">
   <head>
-    <script type="text/javascript" src="toword.js">
-    </script>
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" type="text/css" href="style.css"> 
-    <title>Buy Compost</title>
-    <script type="text/javascript">
-      function calculate(){
-        //calculates the number of bags of compost necessary given n square feet. 
-        var ans=0;
-        var a = document.getElementById("input1").value;
-        //here it's assumed that there are only 20lbs bags and that each square foot requires 5lbs of compost. 
-        if(a<1)
-          window.alert("Invalid input!"); 
-        else if(a<4)
-          ans=1;
-        else if((a%4)>0)
-          ans= ((a-(a%4))/4)+1; 
-        else if((a%4)===0)
-          ans=a/4; 
-        ans= toWords(ans); 
-        document.getElementById("output").innerHTML=("You need "+ans+" 20lbs. bags."); 
-      }
-    </script>
+    <!-- Google Font -->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400' rel='stylesheet' type='text/css'>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <!-- Custom Style Sheet -->
+    <link rel="stylesheet" href="style.css">
+    <!-- Favicon --> 
+    <link rel="shortcut icon" href="favicon.ico">
+    <title>Five Hearts Compost - Buy Compost</title>
   </head>
-  <header>
-    <h1 id="brandName">Five Hearts Compost</h1>
-    <nav class="navbar navbar-default">  
-      <div class="container-fluid">
-        <ul class="nav navbar-nav">
-          <li><img id="navImage" src="Five_Hearts_Compost.jpg" alt="Druken Worm Logo"></li>
-          <li><a href="index.html"><span class="glyphicon glyphicon-home"></a></span></li>
-          <li><a href="whyCompost.html">Why Compost?</a></li>
-          <li><a href="drunkenCompost.html">Drunken Worm Compost</a> </li>
-          <li><a href="buyCompost.html">Buy Some Dirt</a></li>
-          <li><a href="faq.html">FAQ</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contactUs.html">Contact Us</a></li>
-        </ul> 
-      </div> 
-    </nav> 
-  </header>
-  <body> 
-    <div class="jumbotron"> 
-      <h1>Buy Compost</h1>
-      <h2>How much compost do I need?</h2>
-      <p>Use the calculator to figure out how many bags of compost you need:</p>
-      <form>
-        How many square feet do you need to cover?
-        <div class="row">
-          <div class="col-lg-6">
-            <div class="input-group">
-            <span class="input-group-btn">
-            <button class="btn btn-default" onclick="calculate()" type="button">Calculate</button>
-            </span>
-            <input type="text" id="input1" class="form-control" placeholder="Enter square footage ...">
-            </div><!-- /input-group -->
-            <br>
-            <p id="output" style="font-weight:bold;"></p> 
-        </div><!-- /.col-lg-6 -->
-      </form>
+  <body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+              <li><a href="index.html">FIVE HEARTS COMPOST</a><li> 
+              <li><a href="whyCompost.html">Why Compost?</a></li>
+              <li><a href="drunkenCompost.html">Drunken Worm Compost</a> </li>
+              <li><a href="buyCompost.html">Buy Some Dirt</a></li>
+              <li><a href="faq.html">FAQ</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="contactUs.html">Contact Us</a></li>
+            </ul> 
+          </div>
+        </div>
+      </div>
+    </nav>
+    <!-- Jumbotron -->
+    <div class="jumbotron">
+      <div class="container">
+        <h1>This area is under development ...</h1>
+        <p>To purchase compost contact joshdavidoff8@gmail.com</p>
+      </div>
     </div>
-    <footer>
-      <p>
-        &nbsp&copy Five Hearts Compost(2015) &nbsp | &nbsp All Rights Reserved &nbsp | &nbsp 1234 Fake st. Denver CO 00000  &nbsp | &nbsp (312)-123-4567 &nbsp | &nbsp info@fiveheartscompost.com&nbsp&nbsp&nbsp&nbsp&nbsp
-      </p>
-      <ul class="nav navbar-nav">
-        <li><a href="index.html"><span class="glyphicon glyphicon-home"></a></span></li>
-        <li><a href="whyCompost.html">Why Compost?</a></li>
-        <li><a href="drunkenCompost.html">Drunken Worm Compost</a> </li>
-        <li><a href="buyCompost.html">Buy Some Dirt</a></li>
-        <li><a href="faq.html">FAQ</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contactUs.html">Contact Us</a></li>
-      </ul>
-    </footer> 
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <!-- Info Sections -->
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="info-box" id="mainInfobox">
+            <h2>How much compost do I need?</h2>
+            <p>Use the calculator to figure out how many bags of compost you need:</p>
+            <form>
+              <div class="input-group">
+                <span class="input-group-btn">
+                  <button class="btn btn-default" onclick="calculate()" type="button">Calculate</button>
+                </span>
+                <input type="text" id="input1" class="form-control" placeholder="Enter square footage ...">
+              </div><!-- /input-group -->
+              <br>
+              <p id="output" style="font-weight:bold;"></p> 
+            </form>
+          </div>
+        </div>
+    </div>
+    <!-- jQuery -->
+    <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <!-- External JavaScript and Functions--> 
+    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
