--- a/whyCompost.html
+++ b/whyCompost.html
@@ -1,50 +1,55 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" type="text/css" href="style.css"> 
-    <title>Why Compost?</title>
-  </head>
-  <header>
-    <h1 id="brandName">Five Hearts Compost</h1>
-    <nav class="navbar navbar-default">  
-      <div class="container-fluid">
-        <ul class="nav navbar-nav">
-          <li><img id="navImage" src="Five_Hearts_Compost.jpg" alt="Druken Worm Logo"></li>
-          <li><a href="index.html"><span class="glyphicon glyphicon-home"></a></span></li>
-          <li><a href="whyCompost.html">Why Compost?</a></li>
-          <li><a href="drunkenCompost.html">Drunken Worm Compost</a> </li>
-          <li><a href="buyCompost.html">Buy Some Dirt</a></li>
-          <li><a href="faq.html">FAQ</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contactUs.html">Contact Us</a></li>
-        </ul> 
-      </div> 
-    </nav> 
-  </header>
-  <body> 
-    <div class="jumbotron"> 
-      <h2>We are dirt . Cheap.</h2>
-      <p></p>
+<html class="full" lang="en">
+
+<head>
+  <!-- Google Font -->
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400' rel='stylesheet' type='text/css'>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+  <!-- Custom Style Sheet -->
+  <link rel="stylesheet" href="style.css">
+  <!-- Favicon --> 
+  <link rel="shortcut icon" href="favicon.ico">
+  <title>Five Hearts Compost - Why Compost </title>
+</head>
+
+<body>
+  <!-- Navbar -->
+  <nav class="navbar navbar-fixed-top">
+    <div class="navbar-inner">
+      <div class="container">
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="index.html">FIVE HEARTS COMPOST</a><li> 
+            <li><a href="whyCompost.html">Why Compost?</a></li>
+            <li><a href="drunkenCompost.html">Drunken Worm Compost</a> </li>
+            <li><a href="buyCompost.html">Buy Some Dirt</a></li>
+            <li><a href="faq.html">FAQ</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contactUs.html">Contact Us</a></li>
+          </ul> 
+        </div>
+      </div>
     </div>
-    <footer>
-      <p>
-        &nbsp&copy Five Hearts Compost(2015) &nbsp | &nbsp All Rights Reserved &nbsp | &nbsp 1234 Fake st. Denver CO 00000  &nbsp | &nbsp (312)-123-4567 &nbsp | &nbsp info@fiveheartscompost.com&nbsp&nbsp&nbsp&nbsp&nbsp
-      </p>
-      <ul class="nav navbar-nav">
-        <li><a href="index.html"><span class="glyphicon glyphicon-home"></a></span></li>
-        <li><a href="whyCompost.html">Why Compost?</a></li>
-        <li><a href="drunkenCompost.html">Drunken Worm Compost</a> </li>
-        <li><a href="buyCompost.html">Buy Some Dirt</a></li>
-        <li><a href="faq.html">FAQ</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contactUs.html">Contact Us</a></li>
-      </ul>
-    </footer> 
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-  </body>
+  </nav>
+  <!-- Jumbotron -->
+  <div class="jumbotron">
+    <div class="container">
+      <h1>Composting is a good idea and here is why ...</h1>
+      <p>Not only does compost replenish the soil, it also prevents diseases.</p>
+    </div>
+  </div>
+  <!-- Info Sections -->
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <div class="info-box" id="mainInfobox">
+          <p>Compost is your way to provide energy to your soil. Each year, garden plants eat out the organic material of the soil. Compost replenishes the organic material (up to 10% of the soil for optimum growth) to provide food for your plants.</p><br><p>Your soil will be healthier, and your plants will grow better. Compost also helps improve aeration, water retention, lessens disease. Worm compost is full of microbial life, humic acids, and hormones that prevent disease, lead to maximum growth, and retains more water. <a href="http://whatcom.wsu.edu/ag/compost/fundamentals/benefits_benefits.htm">(Compost Fundamentals: Benefits & Uses - benefits of compost)<a></p>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
+
 </html>
